Try to fix onClick on mobile

--- a/client/src/assets/styles/css/style.css
+++ b/client/src/assets/styles/css/style.css
@@ -303,6 +303,7 @@
 .header__user--account__icon {
   font-size: 2.5rem;
   margin-right: 1rem;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1000px) {
@@ -367,11 +368,18 @@
   }
 }
 
+.header__user--img-left {
+  display: none;
+}
+
 .header__user--img-left img {
   display: none;
 }
 
 @media screen and (max-width: 430px) {
+  .header__user--img-left {
+    display: block;
+  }
   .header__user--img-left img {
     display: block;
   }
